[gd_scene load_steps=6 format=3 uid="uid://cc3c0ovd3blsv"]

[ext_resource type="Script" uid="uid://pere3x61cxc3" path="res://playscene/playscene.gd" id="1_8idrd"]
[ext_resource type="AudioStream" uid="uid://dtc16ppqkf3oi" path="res://Audio/same_part.tres" id="2_t1ppe"]
[ext_resource type="Texture2D" uid="uid://vhvumdyst4eh" path="res://background/title_screen.tres" id="3_ihrex"]
[ext_resource type="PackedScene" uid="uid://dynppnqxut73b" path="res://char/tord.tscn" id="4_6qr5g"]
[ext_resource type="PackedScene" uid="uid://dxrqpenwwvbg0" path="res://dia/dialogue.tscn" id="5_xwk58"]

[node name="playscene" type="Node2D"]
script = ExtResource("1_8idrd")

[node name="next_line" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_t1ppe")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ihrex")
expand_mode = 2

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 0

[node name="Control" type="Control" parent="CanvasLayer2"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="character" parent="CanvasLayer2/Control" instance=ExtResource("4_6qr5g")]
unique_name_in_owner = true
position = Vector2(0, -302)

[node name="dialogue" parent="CanvasLayer2" instance=ExtResource("5_xwk58")]
unique_name_in_owner = true

[node name="next_line_time" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="next_line_time" to="." method="_on_next_line_time_timeout"]
